script/iptables.up.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j SNAT --to-source ipserver
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGDROP - [0:0]
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -f -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A INPUT -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "torrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "announce" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "peer_id" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent protocol" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "bittorrent-announce" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce.php?passkey=" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "find_node" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "info_hash" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "get_peers" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce_peers" --algo kmp --to 65535 -j DROP
-A INPUT -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -f -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A INPUT -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "torrent" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "announce" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A INPUT -m string --string "peer_id" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "BitTorrent protocol" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "bittorrent-announce" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce.php?passkey=" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "find_node" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "info_hash" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "get_peers" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce" --algo kmp --to 65535 -j DROP
-A INPUT -m string --string "announce_peers" --algo kmp --to 65535 -j DROP
-A INPUT -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.9.0.0/24 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -p tcp -m tcp --dport 6881:6889 -j DROP
-A FORWARD -m string --string "get_peers" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce_peer" --algo bm --to 65535 -j LOGDROP
-A FORWARD -m string --string "find_node" --algo bm --to 65535 -j LOGDROP
-A FORWARD -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -p tcp -m tcp --dport 6881:6889 -j DROP
-A FORWARD -m string --string "get_peers" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce_peer" --algo bm --to 65535 -j LOGDROP
-A FORWARD -m string --string "find_node" --algo bm --to 65535 -j LOGDROP
-A FORWARD -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A FORWARD -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "tracker" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "announce" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A OUTPUT -p udp -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A LOGDROP -j DROP
COMMIT
# Completed on Wed Mar  8 18:32:19 2017
